# TFM_FIT_CONTROL

./: .coveragerc  .gitignore  Exercise_Detection.txt  Informe_arm_bar_discriminator.txt  Informe_mejoras_deteccion.txt  README.md  README_DEV.md  debug_cropped_pose.py  debug_pose_full.py  environment.yml  model_complexity.txt  project_tree.cmd  pyproject.toml  pytest.ini  requirements.txt
.streamlit/: config.toml
1-ENTREGA_TFM/: MEMORIA_TFM_FIT CONTROL.docx
1-ENTREGA_TFM/Tablas/: Tabla_2.1.csv  Tabla_ID_MediaPipe.xlsm
docs/: spacing-findings.md
reports/: coverage_report.md  coverage_report.txt  junit.xml  pytest_report.html  pytest_report.md  pytest_report.txt
src/: app.py  config.py  debug_report.py  pipeline.py  pipeline_data.py  run_pipeline.py  theme.py
src/A_preprocessing/: frame_extraction.py  video_metadata.py  video_utils.py
src/B_pose_estimation/: __init__.py  constants.py  estimators.py  geometry.py  metrics.py  processing.py  roi_state.py  signal.py  types.py
src/C_analysis/: __init__.py  config_bridge.py  errors.py  metrics.py  overlay.py  pipeline.py  rep_candidates.py  repetition_counter.py  sampling.py  streaming.py
src/C_repetition_analysis/: __init__.py
src/D_modeling/: count_reps.py  fault_detection.py
src/D_visualization/: __init__.py  landmark_drawing.py  landmark_geometry.py  landmark_overlay_styles.py  landmark_renderers.py  (+3 more)
tests/: conftest.py  test_classification_heuristics.py  test_classifier_aggregate.py  test_classify_deadlift_vs_squat.py  test_cli_streamlit_parity.py  test_count_reps.py  test_cv2_video.py  test_debug_report_bundle.py  test_exercise_detector.py  test_exercise_detector_v2.py  test_extract_pipeline.py  test_geometry.py  test_mediapipe_estimators.py  test_mediapipe_landmark_mapping.py  test_metrics_output.py  test_pipeline_debug.py  test_pipeline_prefetch.py  test_pose_utils.py  test_repetition_counter.py  test_roi_pose_estimator_rendering.py  test_roi_state.py  test_video_landmarks.py  test_video_utils.py  test_view_and_exercises.py  test_warnings_free.py
(+165 files in other folders)
