[project]
name = "tfm-fit-control"
version = "0.1.0"
description = "TFM Fit Control"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "numpy<2", # evita incompatibilidades con wheels nativos
  "pandas",
  "scipy",
  "scikit-learn",
  "streamlit>=1.30",
  "mediapipe>=0.10",
  "opencv-contrib-python>=4.8", # en server sin GUI usa ...-headless
  "protobuf<5",
  "cachetools==5.3.3",
]

[dependency-groups]
dev = ["pytest", "ruff", "pytest-cov"]

[tool.setuptools.package-data]
"src.ui.metrics_sync" = ["assets/*.css", "assets/*.js"]
