[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfm-fit-control"
version = "0.1.0"
description = "TFM Fit Control"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.26.0,<2",
  "pandas",
  "scipy",
  "scikit-learn",
  "streamlit>=1.52.1",
  "mediapipe==0.10.21",
  "opencv-contrib-python-headless==4.11.0.86",
  "protobuf>=4.25.3,<5",
  "cachetools==5.3.3",
]

[dependency-groups]
dev = ["pytest", "ruff", "pytest-cov"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ui.metrics_sync" = ["*.css", "*.js"]
